<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.ac.gate</groupId>
  <artifactId>cloud-client-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.2-SNAPSHOT</version>

  <name>GATE Cloud parent POM</name>
  <description>Parent POM for GATE Cloud client library components</description>
  <url>https://cloud.gate.ac.uk</url>

  <organization>
    <name>GATE</name>
    <url>https://gate.ac.uk</url>
  </organization>

  <developers>
    <developer>
      <id>gate-team</id>
      <name>GATE Team</name>
      <email>gate-developers@lists.sourceforge.net</email>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/GateNLP/cloud-client.git</connection>
    <developerConnection>scm:git:git@github.com:GateNLP/cloud-client.git</developerConnection>
    <url>https://github.com/GateNLP/cloud-client</url>
  </scm>

  <modules>
    <module>library</module>
    <module>cli</module>
    <module>gate-plugin</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <distributionManagement>
    <repository>
      <id>gate-oss</id>
      <name>Sonatype OSS staging</name>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
      <layout>default</layout>
    </repository>
    <snapshotRepository>
      <uniqueVersion>true</uniqueVersion>
      <id>gate.snapshots</id>
      <name>GATE Snapshots</name>
      <url>https://repo.gate.ac.uk/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>gpg-sign</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
